[gd_scene load_steps=3 format=3 uid="uid://emlhy8hilx00"]

[ext_resource type="Script" uid="uid://03yckactusbs" path="res://core/ui/aquariumHUD/aquarium_hud.gd" id="1_kg4aj"]
[ext_resource type="PackedScene" uid="uid://c6qmtkj61lgup" path="res://core/ui/errorPopup/ErrorPopupManager.tscn" id="2_nd0lw"]

[node name="AquariumHud" type="CanvasLayer"]
script = ExtResource("1_kg4aj")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Shop" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Shop"

[node name="Map" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Return to Map"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Day" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bla bla bla"

[node name="Money" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1000$"

[node name="ErrorPopupManager" parent="." instance=ExtResource("2_nd0lw")]

[node name="Shop" type="Container" parent="."]
visible = false
custom_minimum_size = Vector2(1152, 200)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Shop"]
custom_minimum_size = Vector2(1152, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Shop"]
custom_minimum_size = Vector2(1152, 200)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="Shop/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Shop/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="Shop/MarginContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Small Aquarium"
autowrap_mode = 2

[node name="Button2" type="Button" parent="Shop/MarginContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Medium Aquarium"
autowrap_mode = 2

[node name="Button3" type="Button" parent="Shop/MarginContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Big Aquarium"
autowrap_mode = 2

[connection signal="pressed" from="MarginContainer/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="MarginContainer/Map" to="." method="_on_map_pressed"]
